<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#DFDBDB"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/l1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SearchView
            android:id="@+id/searchview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:iconifiedByDefault="false"
            android:inputType="text"
            android:queryHint="Search Here"


            android:text="@string/yaarme"
            android:visibility="visible"
            app:layout_constraintLeft_toRightOf="@id/backarrow"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/more"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/three_arrow"
            android:src="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_more_vert_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="162dp" />

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l1"
        app:srcCompat="@drawable/cover" />

    <ImageView
        android:id="@+id/dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/dp"
        android:cropToPadding="true"
        android:elevation="2dp"
        android:src="@drawable/yaarmelogo"
        app:layout_constraintBottom_toBottomOf="@id/guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide"
        app:layout_constraintVertical_bias="0.21" />

    <ImageView
        android:id="@+id/pencil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/pencil"
        app:layout_constraintRight_toLeftOf="@id/right_arrow"
        app:layout_constraintTop_toBottomOf="@id/guide"
        app:srcCompat="@drawable/editblue" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/right_arrow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide"
        app:srcCompat="@drawable/ic_baseline_subdirectory_arrow_right_24" />

    <TextView
        android:id="@+id/titlename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/g_light"
        android:text="@string/yaarme"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/g_bold"
        android:text="@string/description"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlename" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/g_light"
        android:text="@string/followers"
        android:textAlignment="textStart"
        android:textColor="#2a9df4"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/g_light"
        android:text="@string/information"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/followers" />

    <View
        android:id="@+id/l2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="4dp"
        android:background="#C1C1C1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail" />

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/space"
            tools:text="@string/space" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

    </LinearLayout>

    <View
        android:id="@+id/l4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#C1C1C1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l3" />

    <LinearLayout
        android:id="@+id/lineartitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/l4">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/image"
            android:contentDescription="@string/logo_pic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/yaarme"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/g_bold"
                    android:text="@string/yaarme"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/moredown"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/moredown"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/nav_down"
                    android:src="@drawable/down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/yaarme"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/g_light"
                android:text="@string/followers"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/childunder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_6mo"

                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="2dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_public_24" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:text="@string/content"
        android:textAlignment="gravity"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineartitle" />

    <ImageView
        android:id="@+id/imgpost"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:contentDescription="@string/img_post"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:srcCompat="@drawable/yaarmelogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/g_bold"
        android:text="@string/yaarme"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgpost"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="12dp"
        android:text="@string/link"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/submit"
        android:src="@drawable/ic_baseline_edit_24"
        app:backgroundTint="#1569C7"
        app:layout_constraintBottom_toBottomOf="@id/gh"
        app:layout_constraintLeft_toLeftOf="@id/gv"
        app:layout_constraintRight_toRightOf="@id/gv"
        app:layout_constraintTop_toTopOf="@id/gh" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>